# oar-ocr

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: publish.yml  test.yml  windows-build.yml
docs/: FAQ.md  environment-variables.md  features.md  hsd.md  models.md  usage.md
examples/: auto_download.rs  common.rs  doc_orientation_classification.rs  doc_parser.rs  document_orientation.rs  document_rectification.rs  formula_recognition.rs  image_rectification.rs  layout_detection.rs  oarocr_pipeline.rs  ocr.rs  paddleocr_vl.rs  seal_text_detection.rs  structure.rs  table_cell_detection.rs  table_classification.rs  table_structure_recognition.rs  text_detection.rs  text_line_classification.rs  text_line_orientation.rs  text_recognition.rs  unirec.rs
examples/common/: image_loader.rs  mod.rs
examples/utils/: candle_device.rs  device_config.rs  markdown.rs  mod.rs  pdf.rs  visualization.rs
oar-ocr-core/: Cargo.toml  README.md  build.rs
oar-ocr-core/examples/: model_bench.rs
oar-ocr-core/src/: lib.rs
oar-ocr-core/src/core/: constants.rs  macros.rs  mod.rs  validation.rs
oar-ocr-core/src/core/batch/: mod.rs
oar-ocr-core/src/core/batch/dynamic/: mod.rs  processor.rs  types.rs
oar-ocr-core/src/core/config/: builder.rs  derive.rs  errors.rs  mod.rs  model_input.rs  onnx.rs  parallel.rs  rknn.rs  transform.rs
oar-ocr-core/src/core/download/: mod.rs  registry.rs
oar-ocr-core/src/core/errors/: constructors.rs  mod.rs  types.rs
oar-ocr-core/src/core/inference/: backend.rs  factory.rs  mod.rs  model_source.rs  ort_infer_builders.rs  ort_infer_config.rs  ort_infer_execution.rs  rknn_infer.rs  session.rs  tensor_input.rs  tensor_output.rs  thread_pool.rs
oar-ocr-core/src/core/inference/rknn/: custom_ops.rs  error.rs  mod.rs  safe.rs  sys.rs
oar-ocr-core/src/core/traits/: adapter.rs  granular.rs  mod.rs  standard.rs  task.rs  task_def.rs
oar-ocr-core/src/domain/: mod.rs  orientation.rs  structure.rs  text_region.rs
oar-ocr-core/src/domain/adapters/: builder_config.rs  document_orientation_adapter.rs  document_rectification_adapter.rs  formula_recognition_adapter.rs  layout_detection_adapter.rs  mod.rs  preprocessing.rs  seal_text_detection_adapter.rs  table_cell_detection_adapter.rs  table_classification_adapter.rs  table_structure_recognition_adapter.rs  text_detection_adapter.rs  text_line_orientation_adapter.rs  text_recognition_adapter.rs
oar-ocr-core/src/domain/tasks/: document_orientation.rs  formula_recognition.rs  layout_detection.rs  mod.rs  seal_text_detection.rs  table_cell_detection.rs  table_classification.rs  table_structure_recognition.rs  text_detection.rs  text_line_orientation.rs  text_recognition.rs  validation.rs
oar-ocr-core/src/models/: mod.rs
oar-ocr-core/src/models/classification/: pp_lcnet.rs
oar-ocr-core/src/models/detection/: db.rs  picodet.rs  pp_doclayout.rs  rtdetr.rs  scale_aware_detector.rs
oar-ocr-core/src/models/recognition/: crnn.rs  pp_formulanet.rs  slanet.rs  unimernet.rs
oar-ocr-core/src/models/rectification/: uvdoc.rs
oar-ocr-core/src/predictors/: core.rs  document_orientation.rs  document_rectification.rs  formula_recognition.rs  layout_detection.rs  mod.rs  seal_text_detection.rs  table_cell_detection.rs  table_classification.rs  table_structure_recognition.rs  text_detection.rs  text_line_orientation.rs  text_recognition.rs
oar-ocr-core/src/processors/: aspect_ratio_bucketing.rs  db_bitmap.rs  db_postprocess.rs  db_score.rs  decode.rs  formula_preprocess.rs  geometry.rs  layout_postprocess.rs  layout_sorting.rs  layout_utils.rs  mod.rs  normalization.rs  resize_detection.rs  simd.rs  sorting.rs  table_ocr_split.rs  table_structure_decode.rs  types.rs  unimernet_preprocess.rs  uvdoc_postprocess.rs
oar-ocr-core/src/utils/: bbox_crop.rs  cow.rs  crop.rs  dict.rs  image.rs  mod.rs  tensor.rs  topk.rs  transform.rs  validation.rs
oar-ocr-derive/: Cargo.toml  README.md
oar-ocr-derive/src/: lib.rs
oar-ocr-vl/: Cargo.toml  README.md  build.rs
oar-ocr-vl/examples/: bench_omnidocbench.rs  doc_parser.rs  glmocr.rs  hpd_parsing.rs  hsd_demo.rs  hsd_glmocr.rs  hsd_mineru.rs  hsd_omnidocbench.rs  hsd_paddleocr_vl.rs  hunyuanocr.rs  metal_bench.rs  mineru.rs  mineru_diffusion.rs  monkeyocrv2.rs  ovisocr2.rs  paddleocr_vl.rs  unirec.rs
oar-ocr-vl/examples/utils/: mineru_layout.rs  mod.rs  structure_match.rs
oar-ocr-vl/src/: attention.rs  cuda_kernels.cu  cuda_kernels.rs  decoder_graph.rs  doc_parser.rs  kv_trim.rs  lib.rs  utils.rs
oar-ocr-vl/src/glmocr/: config.rs  mod.rs  model.rs  mtp.rs  processing.rs  text.rs  vision.rs
oar-ocr-vl/src/hpd_parsing/: config.rs  mod.rs  model.rs  processing.rs  vision.rs
oar-ocr-vl/src/hsd/: backend_util.rs  drafting.rs  kv_trim.rs  matching.rs  mod.rs  nvtx.rs  prefix_tree.rs  types.rs  verify.rs
oar-ocr-vl/src/hunyuanocr/: config.rs  dflash.rs  dynamic_kv.cu  dynamic_kv.rs  llm.rs  mod.rs  model.rs  processing.rs  vision.rs
oar-ocr-vl/src/lightonocr/: config.rs  mod.rs  model.rs  processing.rs  text.rs  vision.rs
oar-ocr-vl/src/mineru/: config.rs  mod.rs  model.rs  processing.rs  text.rs  vision.rs
oar-ocr-vl/src/mineru_diffusion/: config.rs  mod.rs  model.rs  projector.rs  text.rs
oar-ocr-vl/src/monkeyocrv2/: config.rs  mod.rs  model.rs  processing.rs  vision.rs
oar-ocr-vl/src/ovisocr2/: config.rs  gated_delta.cu  gated_delta.rs  mod.rs  model.rs  processing.rs  text.rs  vision.rs
oar-ocr-vl/src/paddleocr_vl/: config.rs  ernie.rs  mod.rs  model.rs  processing.rs  projector.rs  vision.rs
oar-ocr-vl/src/unirec/: config.rs  decoder.rs  encoder.rs  model.rs
oar-ocr-vl/src/utils/: image.rs  table.rs  text.rs
src/: lib.rs
src/core/: batch.rs  config.rs  dynamic_batch.rs  errors.rs  granular_traits.rs  infer_wrappers.rs  inference.rs  macros.rs  mod.rs  predictions.rs  registry.rs  traits.rs  validation.rs
src/domain/: mod.rs  structure.rs
src/models/: mod.rs
src/oarocr/: builder_utils.rs  mod.rs  ocr.rs  preprocess.rs  processors.rs  result.rs  stitching.rs  structure.rs  table_analyzer.rs  validation.rs  (+2 more)
(+190 files in other folders)
