[workspace]
members = [".", "oar-ocr-derive", "oar-ocr-core", "oar-ocr-vl"]
resolver = "2"

[workspace.package]
version = "0.6.3"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Wang Xin <xinwang614@gmail.com>"]
repository = "https://github.com/greatv/oar-ocr"
homepage = "https://github.com/greatv/oar-ocr"

[workspace.dependencies]
oar-ocr-core = { version = "0.6.3", path = "oar-ocr-core", default-features = false }
oar-ocr-derive = { version = "0.6.3", path = "oar-ocr-derive", default-features = false }

[package]
name = "oar-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "An Optical Character Recognition (OCR) and Document Layout Analysis library written in Rust."
readme = "README.md"
keywords = [
    "ocr",
    "onnx",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[features]
default = ["ort", "download-binaries"]
# ONNX Runtime backend.
ort = ["oar-ocr-core/ort"]
# ONNX Runtime execution provider features
cuda = ["ort", "oar-ocr-core/cuda"]
tensorrt = ["ort", "oar-ocr-core/tensorrt"]
directml = ["ort", "oar-ocr-core/directml"]
coreml = ["ort", "oar-ocr-core/coreml"]
webgpu = ["ort", "oar-ocr-core/webgpu"]
openvino = ["ort", "oar-ocr-core/openvino"]
# Auto-download ONNX Runtime binaries during build (enabled by default).
# Set ORT_LIB_LOCATION to use a custom installation (skips download).
# Use --no-default-features for offline/enterprise environments.
download-binaries = ["ort", "oar-ocr-core/download-binaries"]
# Rockchip RK3588 / RK3576 / RK3568 NPU backend via librknnrt (rknpu2).
# Only takes effect when target_arch = "aarch64". Set RKNN_LIB_DIR when
# librknnrt is not in /usr/lib/aarch64-linux-gnu.
rknpu = ["oar-ocr-core/rknpu"]

[dependencies]
# Core library with all types and predictors
oar-ocr-core.workspace = true
# Derive macros
oar-ocr-derive.workspace = true

# Direct dependencies for oarocr module
image = "0.25.6"
imageproc = "0.26.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
clap = { version = "4.5.42", features = ["derive"] }
tempfile = "3.19"
ab_glyph = "0.2"
hayro = "0.5"
regex = "1"
