[workspace]
members = [".", "oar-ocr-derive", "oar-ocr-core", "oar-ocr-vl"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Wang Xin <xinwang614@gmail.com>"]
repository = "https://github.com/greatv/oar-ocr"
homepage = "https://github.com/greatv/oar-ocr"

[workspace.dependencies]
oar-ocr-core = { version = "0.7.0", path = "oar-ocr-core", default-features = false }
oar-ocr-derive = { version = "0.7.0", path = "oar-ocr-derive", default-features = false }

# Shared third-party dependencies (kept in sync via workspace inheritance).
image = "0.25.6"
imageproc = "0.26.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
regex = "1.11.1"
tokenizers = { version = "0.23", default-features = false, features = ["progressbar", "onig"] }
tempfile = "3.19"
clap = { version = "4.5.42", features = ["derive"] }
hayro = "0.7"

[package]
name = "oar-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "An Optical Character Recognition (OCR) and Document Layout Analysis library written in Rust."
readme = "README.md"
keywords = [
    "ocr",
    "onnx",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[features]
default = ["download-binaries"]
# ONNX Runtime execution provider features
cuda = ["oar-ocr-core/cuda"]
tensorrt = ["oar-ocr-core/tensorrt"]
directml = ["oar-ocr-core/directml"]
coreml = ["oar-ocr-core/coreml"]
webgpu = ["oar-ocr-core/webgpu"]
openvino = ["oar-ocr-core/openvino"]
# Auto-download ONNX Runtime binaries during build (enabled by default).
# Set ORT_LIB_LOCATION to use a custom installation (skips download).
# Use --no-default-features for offline/enterprise environments.
download-binaries = ["oar-ocr-core/download-binaries"]
# Auto-download OCR model files at runtime from ModelScope into `$OAR_HOME`
# (default `~/.oar`). When enabled, builder methods that take a model path
# accept either a filesystem path or a bare registered file name.
auto-download = ["oar-ocr-core/auto-download"]

[dependencies]
# Core library with all types and predictors
oar-ocr-core.workspace = true
# Derive macros
oar-ocr-derive.workspace = true

# Direct dependencies for oarocr module
image.workspace = true
imageproc.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
clap.workspace = true
tempfile.workspace = true
ab_glyph = "0.2"
fontdb = "0.23"
hayro.workspace = true
regex.workspace = true
