[package]
name = "oar-ocr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and predictors for oar-ocr"
readme = "README.md"
keywords = [
    "ocr",
    "onnx",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[features]
default = ["download-binaries"]
# ONNX Runtime execution provider features
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
webgpu = ["ort/webgpu"]
openvino = ["ort/openvino"]
# Auto-download ONNX Runtime binaries during build (enabled by default).
download-binaries = ["ort/download-binaries", "ort/tls-native"]
# Auto-download OCR model files at runtime from ModelScope into the on-disk
# cache (`$OAR_HOME` or `~/.oar`). When enabled, model paths handed to the
# OCR builders that do not exist on disk but match the bundled registry are
# resolved by fetching the file over HTTPS and verifying its SHA-256.
auto-download = ["dep:ureq", "dep:sha2", "dep:dirs"]

[dependencies]
oar-ocr-derive.workspace = true
image = "0.25.6"
imageproc = "0.26.0"
itertools = "0.14"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
ort = { version = "2.0.0-rc.12", default-features = false, features = [ "std", "ndarray", "tracing", "copy-dylibs" ] }
ndarray = "0.17"
nalgebra = "0.34"
rayon = "1.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokenizers = { version = "0.23", default-features = false, features = ["progressbar", "onig"] }
clipper2-rust = "1.0.3"
ureq = { version = "3.0", default-features = false, features = ["rustls", "platform-verifier"], optional = true }
sha2 = { version = "0.11", optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]
tempfile = "3.19"
