[package]
name = "oar-ocr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and predictors for oar-ocr"
readme = "README.md"
keywords = [
    "ocr",
    "onnx",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[features]
default = ["download-binaries"]
# ONNX Runtime execution provider features
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
webgpu = ["ort/webgpu"]
openvino = ["ort/openvino"]
# Auto-download ONNX Runtime binaries during build (enabled by default).
download-binaries = ["ort/download-binaries", "ort/tls-native"]
# Auto-download OCR model files at runtime from ModelScope into the on-disk
# cache (`$OAR_HOME` or `~/.oar`). When enabled, model paths handed to the
# OCR builders that do not exist on disk but match the bundled registry are
# resolved by fetching the file over HTTPS and verifying its SHA-256.
auto-download = ["dep:ureq", "dep:sha2", "dep:dirs"]

[dependencies]
clipper2-rust = "1.0.3"
dirs = { version = "6.0", optional = true }
image.workspace = true
imageproc.workspace = true
itertools = "0.14"
nalgebra = "0.35"
ndarray = "0.17"
oar-ocr-derive.workspace = true
ort = { version = "2.0.0-rc.12", default-features = false, features = [ "std", "ndarray", "tracing", "copy-dylibs" ] }
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = { version = "0.11", optional = true }
thiserror = "2.0"
tokenizers.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = { version = "3.0", default-features = false, features = ["rustls", "platform-verifier"], optional = true }

[dev-dependencies]
tempfile.workspace = true
