[package]
name = "oar-ocr-derive"
version = "0.5.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Wang Xin <xinwang614@gmail.com>"]
description = "Internal procedural derive macros for oar-ocr (implementation detail, not for direct use)"
repository = "https://github.com/greatv/oar-ocr"
keywords = ["oar-ocr", "internal"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
