[package]
name = "oar-ocr-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal procedural derive macros for oar-ocr (implementation detail, not for direct use)"
readme = "README.md"
keywords = ["oar-ocr", "internal"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
