[package]
name = "oar-ocr-vl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vision-Language models for oar-ocr"
readme = "README.md"
keywords = [
    "ocr",
    "vlm",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[features]
default = []
download-binaries = ["oar-ocr-core/download-binaries"]
# When enabled, turns on Candle's CUDA backend for GPU acceleration.
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "oar-ocr-core/cuda",
]
# When enabled, turns on Candle's Metal backend for GPU acceleration on Apple devices.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
# When enabled, instruments the HSD verifier (DSV phases + Stage 1 region drafts)
# with NVTX ranges so `nsys --trace=cuda,nvtx` traces show kernel time grouped
# under labelled DSV phases. Requires `libnvToolsExt` from the CUDA toolkit at
# link time. Off by default — only turn on for profiling builds.
nvtx = []
# Enables the HunyuanOCR prefill-dump replay path controlled by
# OAROCR_PREFILL_INPUTS_FROM. Off by default; intended for cross-implementation
# debugging, not normal generation.
hunyuan-prefill-debug = []

[dependencies]
oar-ocr-core.workspace = true
image = "0.25.6"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
once_cell = "1.19"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.23", default-features = false, features = ["progressbar", "onig"] }
tracing = "0.1"
rayon = "1.8"
html-escape = "0.2"
rand = "0.10"

[dev-dependencies]
clap = { version = "4.5.42", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.8", features = ["html_reports"] }
hayro = "0.6"
oar-ocr = { path = "..", default-features = false }
