[package]
name = "oar-ocr-vl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vision-Language models for oar-ocr"
readme = "README.md"
keywords = [
    "ocr",
    "vlm",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[features]
default = []
download-binaries = ["oar-ocr-core/download-binaries"]
# When enabled, turns on Candle's CUDA backend for GPU acceleration.
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "oar-ocr-core/cuda",
]
# When enabled, turns on Candle's Metal backend for GPU acceleration on Apple devices.
# Cargo features cannot be target-scoped directly, so Linux `--all-features`
# is intentionally not used for this crate; CI checks Metal on macOS instead.
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
]
# When enabled, compiles the Hierarchical Speculative Decoding (HSD) module
# and the per-model `generate_hsd*` paths. HSD relies on Candle's CUDA backend
# (custom KV-cache gather, tree-attention forwards) and is not supported on
# CPU/Metal, so it transitively requires the `cuda` feature.
hsd = ["cuda"]

[dependencies]
oar-ocr-core.workspace = true
image.workspace = true
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
once_cell = "1.19"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true
tracing.workspace = true
rayon.workspace = true
html-escape = "0.2"
rand = "0.10"

[dev-dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
criterion = { version = "0.8", features = ["html_reports"] }
hayro.workspace = true
oar-ocr = { path = "..", default-features = false }
